generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-04/build_stderr_3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In instantiation of ‘decltype ((A->getCountedByField(), static_cast<const clang::FieldDecl*>(nullptr))) {anonymous}::getCountedByFieldCompatImpl(const T*, int) [with T = clang::CountedByAttr; decltype ((A->getCountedByField(), static_cast<const clang::FieldDecl*>(nullptr))) = const clang::FieldDecl*]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:67:37:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:30: error: cannot convert ‘clang::IdentifierInfo*’ to ‘const clang::FieldDecl*’ in return
   34 |   return A->getCountedByField();
      |          ~~~~~~~~~~~~~~~~~~~~^~
      |                              |
      |                              clang::IdentifierInfo*
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:159:6: warning: ‘static bool {anonymous}::SAGenTestChecker::recordHasCountedByFlexArray(const clang::RecordDecl*)’ defined but not used [-Wunused-function]
  159 | bool SAGenTestChecker::recordHasCountedByFlexArray(const RecordDecl *RD) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
